<resources>
    <string name="app_name">e见家装</string>
    <string name="unlogin">未登录</string>
    <string name="reco">已认证</string>
    <string name="paper">我的钱包</string>
    <string name="achive">我的战绩</string>
    <string name="wellfrae">司机福利</string>
    <string name="channel">司机频道</string>
    <string name="ad"> 车神广告</string>
    <string name="service">客服中心</string>
    <string name="setting">设置</string>
    <string name="forgot_your_password">忘记密码</string>
    <string name="Password">密码</string>
    <string name="Confirm">验证码</string>
    <string name="login">登录</string>
    <string name="Username">用户名</string>
    <string name="Phone">手机号码</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>
    <string name="getCode">获取验证码</string>
    <string name="company">所属执行公司</string>
    <string name="re_password">修改密码</string>
    <string name="user_book">用户手册</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="company_code">商户代码</string>
    <string name="quit">退出登录</string>
    <string name="sign_time">签到时间:</string>
    <string name="sign_address">签到楼号</string>
    <string name="sign_map">签到地址</string>
    <string name="customer_name">姓名</string>
    <string name="must_fill_in_sign">*</string>
    <string name="customer_mobile">手机号</string>
    <string name="customer_gender">性别</string>
    <string name="must_select">选择</string>
    <string name="customer_address">地址</string>
    <string name="customer_xiaoqu">小区名称</string>
    <string name="customer_progress">装修进度</string>
    <string name="decorate_style">装修风格</string>
    <string name="intention_to_purchase_product">意向产品</string>
    <string name="must_fill_in">填写</string>
    <string name="please_input">请输入</string>
    <string name="submit">提交中...</string>
    <string name="male">女</string>
    <string name="female">男</string>
    <string name="activity">切换活动</string>
    <string name="confirm">确定</string>
    <string name="sending_request">发送请求</string>
    <string name="cancel">取消</string>
    <string name="friend_request_send_ok">请求已发送</string>
    <string name="modify_passowrd_ok">修改密码成功</string>
    <string name="logout_tip">确定退出登录？</string>
    <string name="exit_login">退出登录</string>
    <string name="ssdk_instapaper_logining">登陆中......</string>
    <string name="empty">无</string>
    <string name="customer_mobile_code">验证码</string>
    <string name="get_mobile_code">获取验证码</string>
    <string name="other_with_colon">其他</string>
    <string name="update">检查更新</string>
    <string name="hangye_category">行业分类</string>
    <string name="info">销售线索详情</string>
    <string name="now_time">本次沟通时间</string>
    <string name="now_xiansuo_think">本次线索意向</string>
    <string name="next_time">下次沟通时间</string>
    <string name="next_xiansuo_think">下次线索意向</string>
    <string name="next_beizhu">下次备注信息</string>
    <string name="now_beizhu">本次备注信息</string>>
</resources>

