<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="280dp"
              android:layout_height="448dp"
              android:background="@drawable/bg_dialog_shape"
              android:orientation="vertical">

    <ListView
        android:id="@+id/lv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="#d6d6d6" />

    <LinearLayout
        android:id="@+id/ll_other_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:gravity="center_vertical"
                android:text="@string/other_with_colon"
                android:textColor="#1a1a1a"
                android:textSize="@dimen/sp_18" />

            <EditText
                android:id="@+id/et_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:hint="@string/please_input"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="#1a1a1a"
                android:textColorHint="#c3c3c3"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="#d6d6d6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/extdialog_left_button_style"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#4a4a4a"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>


</LinearLayout>